# PonyFlow

./: .gitignore  README.md  eslint.config.js  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  state.py  vitest.config.ts
.github/workflows/: build-windows.yml  ci.yml
agents/: coder.py  planner.py
docs/: README.md  architecture.md
docs/decisions/: 0001-rework-to-planner.md  0002-windows-packaging.md
engine/: config.py  engine.py  graph.py  ponyflow.spec  requirements.txt  test_engine.py
engine/agents/: coder.py  planner.py  reader.py  tester.py
engine/agents/skills/: ponytail.md
engine/utils/: llm.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentTrace.tsx  CodeBlock.tsx  InputBar.tsx  RunCard.tsx  RunHistory.tsx  SidePanel.tsx  StatusBar.tsx
src/components/ui/: badge.tsx  button.tsx  scroll-area.tsx  textarea.tsx
src/hooks/: useEngine.ts
src/lib/: engine.test.ts  engine.ts  protocol.ts
src/stores/: runStore.ts  settingsStore.ts  skillsStore.ts
src/test/: setup.ts
utils/: llm.py
