[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ponyflow-engine"
version = "0.1.0"
description = "PonyFlow multi-agent AI engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["engine"]
include = ["engine*"]
