[package]
name = "ponyflow"
version = "0.1.0"
description = "PonyFlow - Multi-agent AI desktop app"
edition = "2021"

[lib]
name = "ponyflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
